Crash when a volume shader is plugged into the volume output of a smoke domain when no smoke is present. #58569

Closed
opened 2018-12-03 01:05:30 +01:00 by Alaska · 12 comments
Member

System Information:
CPU: Rzyen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home

Blender Version:
Broken: Blender 2.8 Beta 925380050d

Short description of error:
When a smoke domain has no smoke and a volume shader is plugged into the volume output for the nodes material while viewport rendering for Cycles is activated, Blender will crash.

Exact steps for others to reproduce the error:

  1. Open Blender and change the render engine to Cycles if you haven't already.
  2. Select the default cube and give it smoke domain properties.
    Smoke domain properties.PNG
  3. Enter rendered viewport mode and open a shader editor in another window.
  4. Add a volume shader of any kind (Principled Volume, Volume Absorption, or Volume Scatter) and plug the shader into the "Volume" input of the material output node.
  5. Blender will crash. This does not occur on non-smoke domain objects or smoke domains with smoke in it.

File with a smoke domain with no smoke:
No smoke-smoke domain.blend

**System Information:** CPU: Rzyen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home **Blender Version:** Broken: Blender 2.8 Beta 925380050d0 **Short description of error:** When a smoke domain has no smoke and a volume shader is plugged into the volume output for the nodes material while viewport rendering for Cycles is activated, Blender will crash. **Exact steps for others to reproduce the error:** 1. Open Blender and change the render engine to Cycles if you haven't already. 2. Select the default cube and give it smoke domain properties. ![Smoke domain properties.PNG](https://archive.blender.org/developer/F5794386/Smoke_domain_properties.PNG) 3. Enter rendered viewport mode and open a shader editor in another window. 4. Add a volume shader of any kind (*Principled Volume, Volume Absorption, or Volume Scatter*) and plug the shader into the "Volume" input of the material output node. 5. Blender will crash. This does not occur on non-smoke domain objects or smoke domains with smoke in it. File with a smoke domain with no smoke: [No smoke-smoke domain.blend](https://archive.blender.org/developer/F5794417/No_smoke-smoke_domain.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

#68359 was marked as duplicate of this issue

#68359 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.
(Only the case though we you are already in rendered view -- does not crash if you plug in the volume shader prior to going into rendered view)

assert(i < datasize_);
in my case i is 15, datasize_ is 0

1   raise                                                                                                                                                                                                                                                                                                                                                                                        0x7ffff466853f 
2   abort                                                                                                                                                                                                                                                                                                                                                                                        0x7ffff4652895 
3   __assert_fail_base.cold.0                                                                                                                                                                                                                                                                                                                                                                    0x7ffff4652769 
4   __assert_fail                                                                                                                                                                                                                                                                                                                                                                                0x7ffff46609f6 
5   ccl::array<int, 16ul>::operator[]                                                                                                                                                                                                                                                                                                                                        util_array.h   210  0x32f5357      
6   ccl::Mesh::get_triangle                                                                                                                                                                                                                                                                                                                                                  mesh.h         83   0x331873a      
7   ccl::BVH::pack_triangle                                                                                                                                                                                                                                                                                                                                                  bvh.cpp        275  0x34eabfb      
8   ccl::BVH::pack_primitives                                                                                                                                                                                                                                                                                                                                                bvh.cpp        312  0x34eb071      
9   ccl::BVH::refit                                                                                                                                                                                                                                                                                                                                                          bvh.cpp        159  0x34e9dc3      
10  ccl::Mesh::compute_bvh                                                                                                                                                                                                                                                                                                                                                   mesh.cpp       1066 0x341fb82      
11  std::__invoke_impl<void, void (ccl::Mesh:: *&)(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int), ccl::Mesh *&, ccl::Device *&, ccl::DeviceScene *&, ccl::SceneParams *&, ccl::Progress *&, unsigned long&, unsigned long&>                                                                                                              invoke.h       73   0x342c418      
12  std::__invoke<void (ccl::Mesh:: *&)(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int), ccl::Mesh *&, ccl::Device *&, ccl::DeviceScene *&, ccl::SceneParams *&, ccl::Progress *&, unsigned long&, unsigned long&>                                                                                                                         invoke.h       95   0x342bd87      
13  std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>::__call<void, int&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul>(std::tuple<int&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul>) functional     400  0x342b577      
14  std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>::operator()<int, void>(int&&)                                                                                                      functional     484  0x342acc3      
15  std::_Function_handler<void (int), std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>>::_M_invoke(std::_Any_data const&, int&&)                                                       std_function.h 297  0x3429d00      
16  std::function<void (int)>::operator()(int) const                                                                                                                                                                                                                                                                                                                         std_function.h 687  0x6233932      
17  ccl::TaskPool::wait_work                                                                                                                                                                                                                                                                                                                                                 util_task.cpp  94   0x6232139      
18  ccl::MeshManager::device_update                                                                                                                                                                                                                                                                                                                                          mesh.cpp       2232 0x342532b      
19  ccl::Scene::device_update                                                                                                                                                                                                                                                                                                                                                scene.cpp      233  0x34b6df5      
20  ccl::Session::update_scene                                                                                                                                                                                                                                                                                                                                               session.cpp    889  0x34bd296
Can confirm. (Only the case though we you are **already in rendered view** -- does not crash if you plug in the volume shader **prior** to going into rendered view) assert(i < datasize_); in my case i is 15, datasize_ is 0 ``` 1 raise 0x7ffff466853f 2 abort 0x7ffff4652895 3 __assert_fail_base.cold.0 0x7ffff4652769 4 __assert_fail 0x7ffff46609f6 5 ccl::array<int, 16ul>::operator[] util_array.h 210 0x32f5357 6 ccl::Mesh::get_triangle mesh.h 83 0x331873a 7 ccl::BVH::pack_triangle bvh.cpp 275 0x34eabfb 8 ccl::BVH::pack_primitives bvh.cpp 312 0x34eb071 9 ccl::BVH::refit bvh.cpp 159 0x34e9dc3 10 ccl::Mesh::compute_bvh mesh.cpp 1066 0x341fb82 11 std::__invoke_impl<void, void (ccl::Mesh:: *&)(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int), ccl::Mesh *&, ccl::Device *&, ccl::DeviceScene *&, ccl::SceneParams *&, ccl::Progress *&, unsigned long&, unsigned long&> invoke.h 73 0x342c418 12 std::__invoke<void (ccl::Mesh:: *&)(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int), ccl::Mesh *&, ccl::Device *&, ccl::DeviceScene *&, ccl::SceneParams *&, ccl::Progress *&, unsigned long&, unsigned long&> invoke.h 95 0x342bd87 13 std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>::__call<void, int&&, 0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul>(std::tuple<int&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul, 4ul, 5ul, 6ul>) functional 400 0x342b577 14 std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>::operator()<int, void>(int&&) functional 484 0x342acc3 15 std::_Function_handler<void (int), std::_Bind<void (ccl::Mesh:: *(ccl::Mesh *, ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, unsigned long, unsigned long))(ccl::Device *, ccl::DeviceScene *, ccl::SceneParams *, ccl::Progress *, int, int)>>::_M_invoke(std::_Any_data const&, int&&) std_function.h 297 0x3429d00 16 std::function<void (int)>::operator()(int) const std_function.h 687 0x6233932 17 ccl::TaskPool::wait_work util_task.cpp 94 0x6232139 18 ccl::MeshManager::device_update mesh.cpp 2232 0x342532b 19 ccl::Scene::device_update scene.cpp 233 0x34b6df5 20 ccl::Session::update_scene session.cpp 889 0x34bd296 ```

Added subscriber: @intrigus-3

Added subscriber: @intrigus-3

Added subscriber: @tstullich

Added subscriber: @tstullich
Brecht Van Lommel was assigned by Philipp Oeser 2019-08-14 10:39:39 +02:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

@brecht: mind checking (on D5478)?, there is a tiny bit more info in #68359...

@brecht: mind checking (on [D5478](https://archive.blender.org/developer/D5478))?, there is a tiny bit more info in #68359...
Member

Added subscriber: @dskjal-1

Added subscriber: @dskjal-1

This issue was referenced by blender/cycles@58023b198e

This issue was referenced by blender/cycles@58023b198e7df0a63612ad1d2707405f38f16ed1

This issue was referenced by b4051db4fc

This issue was referenced by b4051db4fc3ae509aa65f96af348f8241ceb726f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58569
No description provided.